--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>6.1.0</version>
+</dependency>
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
