--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+</dependency>
 	</dependencies>
 
 
