--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-
+spring.datasource.continue-on-error=true
+spring.datasource.url=jdbc:postgres://containers-us-west-92.railway.app:8014/railway
+spring.datasource.username=postgres
+spring.datasource.password=vNLpdeJFpOXWZKpXmZi8
