--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	   <repositories>
+        <repository>
+          <id>jasperreports</id>
+          <url>http://jasperreports.sourceforge.net/maven2</url>
+        </repository>
+        <repository>
+          <id>jaspersoft-third-party</id>
+          <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+        </repository>
+      </repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
