--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 spring.datasource.continue-on-error=true
-spring.datasource.url=jdbc:postgres://containers-us-west-92.railway.app:8014/railway
+spring.datasource.url=jdbc:postgres://@containers-us-west-92.railway.app:8014/railway?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=vNLpdeJFpOXWZKpXmZi8
