--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgres://postgres:vNLpdeJFpOXWZKpXmZi8@@containers-us-west-92.railway.app:8014/railway
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
