--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgres://postgres:vNLpdeJFpOXWZKpXmZi8@containers-us-west-92.railway.app:8014/railway
