--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,15 @@
   <groupId>org.springframework.boot</groupId>
   <artifactId>spring-boot-starter-jdbc</artifactId>
 </dependency>
-<dependency>
+<!-- <dependency>
   <groupId>org.postgresql</groupId>
   <artifactId>postgresql</artifactId>
-</dependency>
+</dependency> -->
+<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 
