--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,9 +9,8 @@ spring.datasource.url=jdbc:mysql://containers-us-west-16.railway.app:5546/railwa
 spring.datasource.username=root
 spring.datasource.password=k1CutlFsid0bdXjEHT8L
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
